--- a/calculator.html
+++ b/calculator.html
@@ -8,7 +8,7 @@
         .calculator{
             margin-top: 150px;
             margin-left: 500px;
-            background-image: url(/asset.html/calculator.jpg);
+            background-image: url(calculator.jpg);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: 100% 100%;
